[profile.release]
opt-level = 3
debug = true
panic = "abort"
lto = "thin"

[profile.release.package."*"]
opt-level = 3
debug = true

[profile.dev]
debug = true
panic = "abort"

[workspace]
resolver = "2"
members = [
    "cli",
    "nfs4",
    "sun_rpc",
    "vm_runner",
    "vm_test_fixture",
    "xdr-extras",
    "xdr-extras-derive",
]
