[package]
name = "nfs4_cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
nfs4_client = { version = "*", path = "../nfs4_client" }
nfs4 = { version = "*", path = "../nfs4" }
sun_rpc_client = { version = "*", path = "../sun_rpc_client" }
