[package]
name = "nfs4_cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
edition = "2021"
description = "NFSv4.1 CLI client and tools"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "^0.4"
indicatif = "^0.17"
nfs4_client = { version = "^0.1", path = "../nfs4_client" }
nfs4 = { version = "^0.1", path = "../nfs4" }
sun_rpc_client = { version = "^0.1", path = "../sun_rpc_client" }
