[package]
name = "nfs4"
version = "0.1.0"
edition = "2021"
description = "Protocol types for NFSv4.1"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "*"
bitflags_serde_shim = "*"
derive_more = "*"
enum-as-inner = "*"
num_enum = "*"
serde = { version = "*", features = ["derive"] }
serde-xdr = "*"
serde_bytes = "*"
sun_rpc = { version = "*", path = "../sun_rpc" }
xdr_extras = { version = "*", path = "../xdr_extras" }
