[package]
name = "nfs4"
version = "0.1.0"
edition = "2021"
description = "Protocol types for NFSv4.1"
license = "MIT"

[features]
default = ["chrono"]

[dependencies]
bitflags = "^2"
bitflags_serde_shim = "^0.2"
chrono = { version = "^0.4", optional = true }
derive_more = "^0.99"
enum-as-inner = "^0.6"
num_enum = "^0.6"
serde = { version = "^1", features = ["derive"] }
serde-xdr = "^0.6"
serde_bytes = "^0.11"
sun_rpc = { version = "^0.1", path = "../sun_rpc" }
xdr_extras = { version = "^0.1", path = "../xdr_extras" }
