[package]
name = "nfs4_client"
version = "0.1.0"
edition = "2021"
description = "NFSv4.1 client"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "*"
nfs4 = { version = "*", path = "../nfs4" }
rand = "*"
paste = "*"
serde-xdr = "*"
sun_rpc_client = { version = "*", path = "../sun_rpc_client" }
