[package]
name = "nfs4_client"
version = "0.1.0"
edition = "2021"
description = "NFSv4.1 client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "^0.99"
nfs4 = { version = "^0.1", path = "../nfs4" }
rand = "^0.4"
paste = "^1"
serde-xdr = "^0.6"
sun_rpc_client = { version = "^0.1", path = "../sun_rpc_client" }

[dev-dependencies]
vm_test_fixture = { version = "^0.1", path = "../vm_test_fixture" }
vm_runner = { version = "^0.1", path = "../vm_runner" }
