[package]
name = "sun_rpc"
version = "0.1.0"
edition = "2021"
description = "Protocol types for Sun RPC"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde-xdr = "*"
serde_bytes = "*"
xdr_extras = { version = "*", path = "../xdr_extras" }
