[package]
name = "sun_rpc"
version = "0.1.0"
edition = "2021"
description = "Protocol types for Sun RPC"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde-xdr = "^0.6"
serde_bytes = "^0.11"
xdr_extras = { version = "^0.1", path = "../xdr_extras" }
