[package]
name = "sun_rpc_client"
version = "0.1.0"
edition = "2021"
description = "Sun RPC client"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "*"
sun_rpc = { version = "*", path = "../sun_rpc" }
serde = "*"
serde-xdr = "*"

[dev-dependencies]
vm_test_fixture = { version = "*", path = "../vm_test_fixture" }
