[package]
name = "vm_runner"
version = "0.1.0"
edition = "2021"
description = "Meant to be used by vm_test_fixture crate to running VMs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
http_io = "^0.2"
log = "^0.4"
qapi = { version = "^0.13", features = ["qapi-qmp"] }
rexpect = "^0.5"
simple-logging = "^2"
tempdir = "^0.3"
