[package]
name = "vm_test_fixture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm_runner = { path = "../vm_runner", version = "*" }

[build-dependencies]
log = "*"
simple-logging = "*"
vm_runner = { path = "../vm_runner", version = "*" }
