[package]
name = "vm_test_fixture"
version = "0.1.0"
edition = "2021"
description = "Runs a VM for use in tests"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "^0.4"
log = "^0.4"
simple-logging = "^2"
vm_runner = { path = "../vm_runner", version = "^0.1" }
