[package]
name = "xdr-extras-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "*"
syn = { version = "^2", features = ["full"] }
quote = "*"

[dev-dependencies]
serde = "*"
serde-xdr = "*"
xdr-extras = { version = "*", path = "../xdr-extras" }
