[package]
name = "xdr-extras"
version = "0.1.0"
edition = "2021"
debug = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "*"
syn = { version = "*", features = ["full"] }
quote = "*"

[dev-dependencies]
serde = "*"
serde-xdr = "*"
