[package]
name = "xdr_extras"
version = "0.1.0"
edition = "2021"
description = "Contains tools to use with the serde-xdr"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
xdr_extras_derive = { version = "*", path = "../xdr_extras_derive" }
