[package]
name = "xdr_extras"
version = "0.1.0"
edition = "2021"
description = "Contains tools to use with the serde-xdr"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
xdr_extras_derive = { version = "^0.1", path = "../xdr_extras_derive" }
