[package]
name = "xdr_extras_derive"
version = "0.1.0"
edition = "2021"
description = "derive macro for xdr_extras crate"
license = "../LICENSE"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "*"
syn = { version = "^2", features = ["full"] }
quote = "*"

[dev-dependencies]
serde = "*"
serde-xdr = "*"
# xdr_extras = { version = "*", path = "../xdr_extras" }
